styles.css
/* ... */
* {
  box-sizing: border-box;
}

.row {
  display: flex;
}

/* Create two equal columns that sits next to each other */
.column {
  flex: 33.3333333%;
  padding: 10px;
  height: 300px; /* Should be removed. Only for demonstration */
}

.jdg-nav {
  max-width: 1200px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}

.jdg-links-container {
  display: flex;
  width: 100%;
  justify-content: space-around;
}

.jdg-links-inner-container {
  display: flex;
  gap: 2px;
}

.jdg-nav button {
  background-color: #2569b6;
  border: black;
  color: white;
  padding: 15px;
  border-radius: 10px;
  transition: 399ms;
}

.jdg-nav button:hover {
  background-color: rgb(232, 222, 26);
  color: #2569b6;
  height: auto;
  border-radius: 20px;
}

.jdg-nav-outer {
  width: 100%;
  position: fixed;
  display: flex;
  justify-content: space-around;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 100;
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
}

.jdg-team-container {
  display: flex;
  justify-content: space-between;
  max-width: 1200px;
  width: 100%;
  margin-bottom: 40px;
}

@media screen and (max-width: 1100px) {
  .jdg-team-container {
    flex-direction: column;
    align-items: center;
  }
}

.jdg-team-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 360px;
}

.jdg-team-container-outer {
  display: flex;
  justify-content: center;
}

.jdg-side-nav {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 99;
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  right: 0;
  padding: 10px;
  border-bottom-left-radius: 10px;
  transform: translateX(500px);
  top: 75px;
  transition: 400ms;
}

.jdg-nav-btn-wrapper {
  display: flex;
  gap: 10px;
}

.jdg-close-catcher {
  width: 100vw;
  height: 100vh;
  z-index: 98;
  position: fixed;
}

.jdg-track-container {
  padding: 15px;
}

.jdg-track-item {
  background-color: rgb(47, 87, 172);
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 800px;
  /* background-color: white; */
  box-shadow: 0 0 50px rgb(47, 87, 172);
  border-radius: 15px;
}

.jdg-track-item h1 {
  color: rgb(240, 216, 91);
}

.jdg-track-item h2 {
  text-align: center;
  color: rgb(183, 200, 238);
  font-size: 15px;
  font-weight: 400;
}

.jdg-track-title {
  margin-bottom: 30px;
}

